--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -6,7 +6,16 @@
 
 = SDL 1.3 API by Category =
 
-== Basics ==
+== Enumerations ==
+
+[[CategoryEnum|View the SDL Enumerations]]
+
+== Structures ==
+
+[[CategoryStruct|View the SDL Structures]]
+
+== Functions ==
+=== Basics ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -23,7 +32,7 @@
 |}
 
 
-== Video ==
+=== Video ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -46,7 +55,7 @@
 |}
 
 
-== Input Events ==
+=== Input Events ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -66,7 +75,7 @@
 |}
 
 
-== Force Feedback ==
+=== Force Feedback ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -77,7 +86,7 @@
 |}
 
 
-== Audio ==
+=== Audio ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -88,7 +97,7 @@
 |}
 
 
-== Threads ==
+=== Threads ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -105,7 +114,7 @@
 |}
 
 
-== Timers ==
+=== Timers ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -116,7 +125,7 @@
 |}
 
 
-== File I/O Abstraction ==
+=== File I/O Abstraction ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -127,7 +136,7 @@
 |}
 
 
-== Shared Object Support ==
+=== Shared Object Support ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -138,7 +147,7 @@
 |}
 
 
-== Platform and CPU Information ==
+=== Platform and CPU Information ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -155,7 +164,7 @@
 |}
 
 
-== Power Management ==
+=== Power Management ===
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
