--- a/SDL_WasInit.mediawiki
+++ b/SDL_WasInit.mediawiki
@@ -26,7 +26,7 @@ You can add your code example here
 
 == Remarks ==
 <span id="flags"></span>These are the flags which may be passed to [[SDL_WasInit]]() and may be OR'd together to query multiple, specific subsystems simultaneously. 
-<<Include(SDL_Init, , , from="OR'd together.", to="== Return Value ==")>>
+<<Include(SDL_Init, , , from="OR'd together.", to="This function loads")>>
 
 == Related Functions ==
 :[[SDL_Init]]
