--- a/SDL_GL_GetAttribute.mediawiki
+++ b/SDL_GL_GetAttribute.mediawiki
@@ -24,7 +24,7 @@ int SDL_GL_GetAttribute(SDL_GLattr attr,
 |}
 
 == Return Value ==
-Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or ,,a negative error code,, ^* -1 *^ on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -32,7 +32,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>[[SDL_GL_GetAttribute]]() places the value of the SDL/OpenGL attribute '''attr''' into '''value'''. This is useful after a call to [[SDL_SetVideoMode]]() to check whether your attributes have been set as you expected.<br/>*
+
+<<Color2(green,Can't find SDL_SetVideoMode.  Has it been replaced by a function with a different name?  Found SDL_GetDisplayMode as the next closest sounding function.)>>
 
 == Related Functions ==
 :[[SDL_GL_SetAttribute]]
