--- a/SDL_GL_GetProcAddress.mediawiki
+++ b/SDL_GL_GetProcAddress.mediawiki
@@ -56,9 +56,9 @@ else{
 <br/>*
 
 == Remarks ==
-*<br/>If the GL library is loaded at runtime with [[SDL_GL_LoadLibrary]](), then all GL functions must be retrieved this way. Usually this is used to retrieve function pointers to OpenGL extensions. Note that this function needs an OpenGL context to ,,function,, ^work^ properly, so it should be called after [[SDL_SetVideoMode]]() has been called (with the SDL_OPENGL flag).
+*<br/>If the GL library is loaded at runtime with [[SDL_GL_LoadLibrary]](), then all GL functions must be retrieved this way. Usually this is used to retrieve function pointers to OpenGL extensions. Note that this function needs an OpenGL context to ,,function,, ^work^ properly, so it should be called after ,,[[SDL_SetVideoMode]]() has been called (with the SDL_OPENGL flag),, ^initializing the video driver^.
 
-<<Color2(green,Can't find SDL_SetVideoMode. Has it been replaced?)>>
+<<Color2(green,Can't find SDL_SetVideoMode. Has it been replaced?  Is the superscript from SDL_GL_!LoadLibrary the correct replacement for the above?)>>
 
 OpenGL function pointers must be declared APIENTRY as in the example code. This will ensure the proper calling convention is followed on platforms where this matters (Win32) thereby avoiding stack corruption. In a Win32 build environment, APIENTRY should be defined as <code>__stdcall</code>. <br/>*
 
