--- a/SDL_GLattr.mediawiki
+++ b/SDL_GLattr.mediawiki
@@ -71,6 +71,8 @@ You can add your code example here
 ```
 
 == Remarks ==
+*<br/>While you can set most OpenGL attributes normally, the attributes listed above must be known before SDL sets the video mode. These attributes are set and read with [[SDL_GL_SetAttribute]]() and [[SDL_GL_GetAttribute]]().<br/>*
+
 <span id="multisample"></span> [http://en.wikipedia.org/wiki/Multisample_anti-aliasing Multisample anti-aliasing] is a type of full screen anti-aliasing.  Multipsampling defaults to off but can be turned on by setting SDL<code></code>_GL<code></code>_MULTISAMPLEBUFFERS to 1 and SDL_<code></code>GL_<code></code>MULTISAMPLESAMPLES to a value greater than 0.  Typical values are 2 and 4.  
 
 <span id="OpenGL"></span> SDL_<code></code>GL_<code></code>CONTEXT_<code></code>MAJOR_<code></code>VERSION and SDL_<code></code>GL_<code></code>CONTEXT_<code></code>MINOR_<code></code>VERSION are used when creating an OpenGL 3.x context. 
