--- a/SDL_MapRGB.mediawiki
+++ b/SDL_MapRGB.mediawiki
@@ -31,6 +31,15 @@ Uint32 SDL_MapRGB(const SDL_PixelFormat* format,
 == Return Value ==
 A pixel value.
 
+*<br/>Maps the RGB color value to the specified pixel format and returns the pixel value as a 32-bit int best approximating the given RGB color value for the given pixel format.
+
+If the format has a palette (8-bit) the index of the closest matching color in the palette will be returned.
+
+If the specified pixel format has an alpha component it will be returned as all 1 bits (fully opaque).
+
+<<Color2(green,Does this next part belong in Remarks instead?)>>
+If the pixel format bpp (color depth) is less than 32-bpp then the unused upper bits of the return value can safely be ignored (e.g., with a 16-bpp format the return value can be assigned to a Uint16, and similarly a Uint8 for an 8-bpp format).<br/>*
+
 == Code Examples ==
 ```c++
 You can add your code example here
@@ -40,6 +49,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_GetRGB]] *
+:[[SDL_GetRGBA]] *
 :[[SDL_MapRGBA]]
 
 ----
