update content (old wiki)

--- a/SDL_MapRGBA.mediawiki
+++ b/SDL_MapRGBA.mediawiki
@@ -33,7 +33,9 @@ Uint32 SDL_MapRGBA(const SDL_PixelFormat* format,
 |}
 
 == Return Value ==
-A pixel value.
+A *32-bit* pixel value.
+
+If the format has a palette (8-bit) the index of the closest matching color in the palette will be returned.
 
 == Code Examples ==
 ```c++
@@ -41,9 +43,13 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>If the specified pixel format has no alpha component the alpha value will be ignored (as it will be in formats with a palette).
+
+If the pixel format bpp (color depth) is less than 32-bpp then the unused upper bits of the return value can safely be ignored (e.g., with a 16-bpp format the return value can be assigned to a Uint16, and similarly a Uint8 for an 8-bpp format). <br/>*
 
 == Related Functions ==
+:[[SDL_GetRGB]] *
+:[[SDL_GetRGBA]] *
 :[[SDL_MapRGB]]
 
 ----
