--- a/SDL_FreeSurface.mediawiki
+++ b/SDL_FreeSurface.mediawiki
@@ -3,7 +3,9 @@
 '''DRAFT'''
 
 = SDL_FreeSurface =
-Use this function to ,,allocate and,, free an RGB surface.
+Use this function to allocate and free an RGB surface.  
+
+<<Color2(green,Should this be free and allocate? Does it free first?  Is it freeing the surface or the resources or is that the same?)>>
 
 
 == Syntax ==
@@ -14,7 +16,7 @@ void SDL_FreeSurface(SDL_Surface* surface)
 == Function Parameters ==
 {|
 |'''surface'''
-|a pointer to the [[SDL_Surface]] to free
+|^a pointer to the [[SDL_Surface]] to free^ ''--or--'' *a pointer to the surface to delete; ,,it is safe to pass NULL as surface,,, ^may be NULL^ in which case [[SDL_FreeSurface]]() will do nothing*
 |}
 
 == Code Examples ==
@@ -26,6 +28,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 <<Color2(green,I don't think this note applies to this function but this function was listed with the group below in the header so I'll leave it because it's easier to delete than add when we're editing.)>>  If ,,the,, '''depth''' is 4 or 8 bits, an empty palette is allocated for the surface. If ,,the,, '''depth''' is greater than 8 bits, the pixel format is set using the flags '[RGB]mask'. 
+
+*<br/>Frees the resources used by a previously created [[SDL_Surface]]. If the surface was created using [[SDL_CreateRGBSurfaceFrom]]() then the pixel data is not freed.<br/>*
 
 == Related Functions ==
 :[[SDL_CreateRGBSurface]]
