--- a/SDL_SaveBMP_RW.mediawiki
+++ b/SDL_SaveBMP_RW.mediawiki
@@ -22,8 +22,10 @@ int SDL_SaveBMP_RW(SDL_Surface* surface,
 |a pointer to a data source to save to
 |-
 |'''freedst'''
-|non-zero to close the source ''(should this be dst instead of src?)'' after being written
+|non-zero to close the source after being written
 |}
+
+<<Color2(green,Why is it free''dst'' and it's the ''source'' that is closed?)>> 
 
 == Return Value ==
 Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
