--- a/SDL_LockSurface.mediawiki
+++ b/SDL_LockSurface.mediawiki
@@ -21,9 +21,34 @@ int SDL_LockSurface(SDL_Surface* surface)
 Returns 0, or -1 if the surface couldn't be locked; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
+*
 ```c++
-You can add your code example here
+SDL_Surface* surface = NULL;
+
+/* Assign a surface pointer to surface */
+
+SDL_LockSurface( surface );
+
+/* Surface is locked */
+/* Direct pixel access on surface here */
+
+SDL_LockSurface( surface );
+
+/* More direct pixel access on surface */
+
+SDL_UnlockSurface( surface );
+
+/* Surface is still locked */
+/* Note: In versions < 1.1.8, the surface would have been */
+/* no longer locked at this stage                         */
+
+SDL_UnlockSurface( surface );
+/* Surface is now unlocked */
+
+SDL_FreeSurface( surface );
+surface = NULL;
 ```
+*
 
 == Remarks ==
 Between calls to [[SDL_LockSurface]]() / [[SDL_UnlockSurface]](), you can write to and read from surface->pixels, using the pixel format stored in surface->format. Once you are done accessing the surface, you should use [[SDL_UnlockSurface]]() to release it.
