--- a/SDL_GetKeyboardState.mediawiki
+++ b/SDL_GetKeyboardState.mediawiki
@@ -18,10 +18,10 @@ Uint8* SDL_GetKeyboardState(int* numkeys)
 |}
 
 == Return Value ==
-An array of key states. Indexes into this array are obtained by using SDL_scancode values.
+^A pointer to^ an array of key states. *A value of 1 means that the key is pressed and a value of 0 means that it is not.*  Indexes into this array are obtained by using [[SDL_scancode]] values.  *The pointer returned is a pointer to an internal SDL array. It will be valid for the whole lifetime of the application and should not be freed by the caller.*
 
 == Code Examples ==
-<<Color2(green,Is this entered correctly? Does the \code and \endcode go in or is that doxygen markup in the header?)>>
+<<Color2(green,Is this entered correctly? Does the \code and \endcode go in or is that doxygen markup in the header?  There is a different example in the old wiki.)>>
 ```c++
 Uint8 *state = SDL_GetKeyboardState(NULL);
 if ( state[SDL_SCANCODE_RETURN] ) {
@@ -30,9 +30,15 @@ if ( state[SDL_SCANCODE_RETURN] ) {
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<<Color2(green,From SDL_GetKeyState in old wiki.)>><br/>
+Note: Use [[SDL_PumpEvents]]() to update the state array.
+
+Note: This function gives you the current state after all events have been processed, so if a key or button has been pressed and released before you process events, then the pressed state will never show up in the <code>getstate</code> <<Color2(green,formatting here ok?)>> calls.
+
+Note: This function doesn't take into account whether shift has been pressed or not. <br/>*
 
 == Related Functions ==
+:[[SDL_PumpEvents]] *
 
 ----
 [[CategoryAPI]], [[CategoryKeyboard]]
