--- a/SDL_SetModState.mediawiki
+++ b/SDL_SetModState.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_SetModState =
-Use this function to set the current key modifier state for the selected keyboard.
+Use this function to set the current key modifier state for the ^?selected?^ keyboard.
 
 
 == Syntax ==
@@ -23,7 +23,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>The inverse of [[SDL_GetModState]](), [[SDL_SetModState]]() allows you to impose modifier key states on your application.  Simply pass your desired modifier states into '''modstate'''. This value may be a bitwise, OR'd combination of* ^[[SDLMod]] values^.
+
+This does not change the keyboard state, only the key modifier flags.
 
 == Related Functions ==
 :[[SDL_GetModState]]
