update content (old wiki)

--- a/SDL_CreateCursor.mediawiki
+++ b/SDL_CreateCursor.mediawiki
@@ -41,9 +41,91 @@ SDL_Cursor* SDL_CreateCursor(const Uint8* data,
 A pointer to an [[SDL_Cursor]] structure filled with the cursor information. ???
 
 == Code Examples ==
+*
 ```c++
-You can add your code example here
+/* Stolen from the mailing list */
+/* Creates a new mouse cursor from an XPM */
+
+
+/* XPM */
+static const char *arrow[] = {
+  /* width height num_colors chars_per_pixel */
+  "    32    32        3            1",
+  /* colors */
+  "X c #000000",
+  ". c #ffffff",
+  "  c None",
+  /* pixels */
+  "X                               ",
+  "XX                              ",
+  "X.X                             ",
+  "X..X                            ",
+  "X...X                           ",
+  "X....X                          ",
+  "X.....X                         ",
+  "X......X                        ",
+  "X.......X                       ",
+  "X........X                      ",
+  "X.....XXXXX                     ",
+  "X..X..X                         ",
+  "X.X X..X                        ",
+  "XX  X..X                        ",
+  "X    X..X                       ",
+  "     X..X                       ",
+  "      X..X                      ",
+  "      X..X                      ",
+  "       XX                       ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "                                ",
+  "0,0"
+};
+
+static SDL_Cursor *init_system_cursor(const char *image[])
+{
+  int i, row, col;
+  Uint8 data[4*32];
+  Uint8 mask[4*32];
+  int hot_x, hot_y;
+
+  i = -1;
+  for ( row=0; row<32; ++row ) {
+    for ( col=0; col<32; ++col ) {
+      if ( col % 8 ) {
+        data[i] <<= 1;
+        mask[i] <<= 1;
+      } else {
+        ++i;
+        data[i] = mask[i] = 0;
+      }
+      switch (image[4+row][col]) {
+        case 'X':
+          data[i] |= 0x01;
+          mask[i] |= 0x01;
+          break;
+        case '.':
+          mask[i] |= 0x01;
+          break;
+        case ' ':
+          break;
+      }
+    }
+  }
+  sscanf(image[4+row], "%d,%d", &hot_x, &hot_y);
+  return SDL_CreateCursor(data, mask, 32, 32, hot_x, hot_y);
+}
 ```
+*
 
 == Remarks ==
 The cursor width ''('''w''')'' must be a multiple of 8 bits.
@@ -71,8 +153,18 @@ The cursor is created in black and white according to the following:
 |<:> Inverted color if possible, black if not.
 |}
 
+*<br/>Cursors created with this function must be freed with [[SDL_FreeCursor]]().
+
+If you want to have a color cursor then this function is not for you; instead, you must hide the normal system cursor ([[SDL_ShowCursor]]) and in your main loop, when you draw graphics, also draw an [[SDL_Surface]] at the location of the mouse cursor. 
+
+<<Color2(green,Should the above comment about color cursors be rephrased to be less conversational?  Example below:)>><br/>*
+
+^To create a color cursor hide the normal system cursor ([[SDL_ShowCursor]]) and, along with your other graphics, draw an [[SDL_Surface]] at the location of the mouse cursor in your main loop.^
+
 == Related Functions ==
 :[[SDL_FreeCursor]]
+:[[SDL_SetCursor]] *
+:[[SDL_ShowCursor]] *
 
 ----
 [[CategoryAPI]], [[CategoryMouse]]
